--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -10,7 +10,7 @@
 }
 .login_content {
   width: 600px;
-  height: 300px;
+  height: 320px;
   background-color: #999;
   padding: 1rem;
   border-radius: 1rem;
@@ -44,7 +44,30 @@
   cursor: pointer;
   transition: 0.3s ease;
 }
-.login_content button:hover {
-  background-color: #000;
-  color: #fff;
+
+.error {
+  color: rgb(216, 0, 0);
+  font-size: 18px;
+  font-weight: bold;
+  padding: 0;
+  margin-bottom: 10px;
+}
+.loader {
+  width: 32px;
+  height: 32px;
+  border: 3px solid #000;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
