--- a/src/components/Gallary/Gallary.css
+++ b/src/components/Gallary/Gallary.css
@@ -55,12 +55,12 @@
   align-items: center;
   gap: 1rem;
   flex-direction: column;
-  background-color: #ccc;
+  background-color: #eee;
   border-radius: 1rem;
 }
 .images_item img {
   width: 200px;
-  border-radius: 10px;
+  height: 250px;
 }
 .images_item div button {
   padding: 10px 20px;
@@ -101,10 +101,6 @@
   font-size: 18px;
   transition: 0.3s ease;
 }
-.delete_image div button:hover {
-  background-color: #000;
-  color: #fff;
-}
 .update_image {
   position: fixed;
   top: 30%;
@@ -130,5 +126,35 @@
   .delete_image,
   .update_image {
     width: 350px;
+  }
+}
+.erro {
+  color: rgb(209, 0, 0);
+  font-size: 18px;
+  font-weight: bold;
+}
+.addImage_bottem button {
+  padding: 10px 20px;
+  border: 1px solid #999;
+  font-size: 18px;
+  border-radius: 10px;
+}
+.loader {
+  width: 32px;
+  height: 32px;
+  border: 3px solid #000;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
